book/tests/snapshots/snapshot__run_display_reference_prql@language-features__syntax-12.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/syntax-12.prql
---
prql target:sql.bigquery



from `project-foo.dataset.table`
join `project-bar.dataset.table` [==col_bax]



