book/tests/snapshots/snapshot__run_display_reference_prql@language-features__syntax-15.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/syntax-15.prql
---
from numbers
select [
  small = 1.0000001,
  big = 5000000,
]



